[workspace]
members = ["examples/leptos-animate-test"]

[workspace.dependencies]
leptos = { version = "0.8.15" }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.11" }
leptos_actix = { version = "0.8.6" }

#[patch.crates-io]
#leptos = { git = "https://github.com/leptos-rs/leptos.git" }
#leptos_meta = { git = "https://github.com/leptos-rs/leptos.git" }
#leptos_router = { git = "https://github.com/leptos-rs/leptos.git" }
#leptos_actix = { git = "https://github.com/leptos-rs/leptos.git" }
#reactive_graph = { git = "https://github.com/leptos-rs/leptos.git" }

[package]
name = "leptos-animate"
version = "0.2.0"
edition = "2021"
authors = ["Luxalpa"]
repository = "https://github.com/luxalpa/leptos-animate"
license = "MIT"
description = "Animation components and utilities for Leptos"
keywords = ["leptos", "animations", "dom", "web", "wasm"]

[dependencies]
leptos = { workspace = true }
indexmap = "2"
leptos-use = "0.19.0"
wasm-bindgen = "0.2.106"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
itertools = "0.14.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "DomRect",
    "Animation",
    "KeyframeAnimationOptions",
    "FillMode",
    "ResizeObserverSize",
]

[features]
ssr = ["leptos-use/ssr"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"